--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "howler": "^2.2.3",
+    "nouislider": "^15.7.1",
     "vue": "^3.2.13"
   },
   "devDependencies": {
